Refactor: Character sheet UI improvements - Statistics section
- Renamed 'Armor' section to 'Statistics' (all 3 languages)
- Removed disabled 'Resistances' button (grayed out placeholder)
- Added 'Feature coming soon' placeholder text
- Relocated 'Manage Armor' button below 'Realm Rank' section
- Improved character sheet visual hierarchy and organization
- Updated CHANGELOG (Full + Simple versions in EN/FR/DE)

--- a/Language/de.json
+++ b/Language/de.json
@@ -150,8 +150,9 @@
     "bulk_actions_group_title": "Massenaktionen",
     "bulk_action_delete": "Auswahl löschen",
     "bulk_action_execute_button": "Ausführen",
-    "armor_group_title": "Rüstung",
+    "armor_group_title": "Statistiken",
     "resistances_button": "Widerstände",
+    "statistics_coming_soon": "🔜 Funktion kommt bald",
     "config_misc_group_title": "Verschiedenes",
     "config_disable_disclaimer_label": "Startwarnmeldung deaktivieren",
     "migration_dialog_title": "Migration der Ordnerstruktur",
