--- a/Language/en.json
+++ b/Language/en.json
@@ -150,8 +150,9 @@
     "bulk_action_delete": "Delete Selection",
     "bulk_action_execute_button": "Execute",
     "create_char_tooltip": "Create a new character",
-    "armor_group_title": "Armor",
+    "armor_group_title": "Statistics",
     "resistances_button": "Resistances",
+    "statistics_coming_soon": "🔜 Feature coming soon",
     "config_misc_group_title": "Miscellaneous",
     "config_disable_disclaimer_label": "Disable startup warning message",
     "migration_dialog_title": "Folder Structure Migration",
