--- a/Language/fr.json
+++ b/Language/fr.json
@@ -150,8 +150,9 @@
     "new_char_race_prompt": "Race :",
     "new_char_class_prompt": "Classe :",
     "invalid_race_class_combo": "La race {race} ne peut pas jouer la classe {class}",
-    "armor_group_title": "Armure",
+    "armor_group_title": "Statistiques",
     "resistances_button": "Résistances",
+    "statistics_coming_soon": "🔜 Fonctionnalité bientôt disponible",
     "config_misc_group_title": "Divers",
     "config_disable_disclaimer_label": "Désactiver le message d'avertissement au démarrage",
     "migration_dialog_title": "Migration de la structure des dossiers",
