--- a/Language/en.json
+++ b/Language/en.json
@@ -151,6 +151,18 @@
     "bulk_action_execute_button": "Execute",
     "create_char_tooltip": "Create a new character",
     "armor_group_title": "Statistics",
+    "rvr_section_title": "⚔️ RvR",
+    "pvp_section_title": "🗡️ PvP",
+    "pve_section_title": "🐉 PvE",
+    "tower_captures_label": "🗼 Tower Captures:",
+    "keep_captures_label": "🏰 Keep Captures:",
+    "relic_captures_label": "💎 Relic Captures:",
+    "solo_kills_label": "⚔️ Solo Kills:",
+    "deathblows_label": "💀 Deathblows:",
+    "kills_label": "🎯 Kills:",
+    "pve_coming_soon": "🔜 PvE Statistics coming soon",
+    "update_rvr_pvp_button": "🔄 Update stats",
+    "update_rvr_pvp_tooltip": "Retrieve RvR and PvP statistics from Herald",
     "resistances_button": "Resistances",
     "statistics_coming_soon": "🔜 Feature coming soon",
     "config_misc_group_title": "Miscellaneous",
