--- a/Language/fr.json
+++ b/Language/fr.json
@@ -151,6 +151,18 @@
     "new_char_class_prompt": "Classe :",
     "invalid_race_class_combo": "La race {race} ne peut pas jouer la classe {class}",
     "armor_group_title": "Statistiques",
+    "rvr_section_title": "⚔️ RvR",
+    "pvp_section_title": "🗡️ PvP",
+    "pve_section_title": "🐉 PvE",
+    "tower_captures_label": "🗼 Tower Captures:",
+    "keep_captures_label": "🏰 Keep Captures:",
+    "relic_captures_label": "💎 Relic Captures:",
+    "solo_kills_label": "⚔️ Solo Kills:",
+    "deathblows_label": "💀 Deathblows:",
+    "kills_label": "🎯 Kills:",
+    "pve_coming_soon": "🔜 Statistiques PvE à venir",
+    "update_rvr_pvp_button": "🔄 Actualiser les stats",
+    "update_rvr_pvp_tooltip": "Récupérer les statistiques RvR et PvP depuis le Herald",
     "resistances_button": "Résistances",
     "statistics_coming_soon": "🔜 Fonctionnalité bientôt disponible",
     "config_misc_group_title": "Divers",
