--- a/Language/de.json
+++ b/Language/de.json
@@ -151,6 +151,18 @@
     "bulk_action_delete": "Auswahl löschen",
     "bulk_action_execute_button": "Ausführen",
     "armor_group_title": "Statistiken",
+    "rvr_section_title": "⚔️ RvR",
+    "pvp_section_title": "🗡️ PvP",
+    "pve_section_title": "🐉 PvE",
+    "tower_captures_label": "🗼 Turm-Eroberungen:",
+    "keep_captures_label": "🏰 Burg-Eroberungen:",
+    "relic_captures_label": "💎 Reliquien-Eroberungen:",
+    "solo_kills_label": "⚔️ Solo-Kills:",
+    "deathblows_label": "💀 Todesstöße:",
+    "kills_label": "🎯 Kills:",
+    "pve_coming_soon": "🔜 PvE-Statistiken demnächst verfügbar",
+    "update_rvr_pvp_button": "🔄 Stats aktualisieren",
+    "update_rvr_pvp_tooltip": "RvR- und PvP-Statistiken vom Herald abrufen",
     "resistances_button": "Widerstände",
     "statistics_coming_soon": "🔜 Funktion kommt bald",
     "config_misc_group_title": "Verschiedenes",
