--- a/Language/de.json
+++ b/Language/de.json
@@ -160,9 +160,22 @@
     "solo_kills_label": "⚔️ Solo-Kills:",
     "deathblows_label": "💀 Todesstöße:",
     "kills_label": "🎯 Kills:",
+    "dragon_kills_label": "Drachen-Kills:",
+    "legion_kills_label": "Legionen-Kills:",
+    "mini_dragon_kills_label": "Mini-Drachen-Kills:",
+    "epic_encounters_label": "Epische Begegnungen:",
+    "epic_dungeons_label": "Epische Dungeons:",
+    "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 PvE-Statistiken demnächst verfügbar",
-    "update_rvr_pvp_button": "🔄 Stats aktualisieren",
-    "update_rvr_pvp_tooltip": "RvR- und PvP-Statistiken vom Herald abrufen",
+    "update_rvr_pvp_button": "🔄 Stats Aktualisieren",
+    "update_rvr_pvp_tooltip": "RvR-, PvP-, PvE- und Vermögens-Statistiken vom Herald abrufen",
+    "wealth_section_title": "💰 Vermögen",
+    "gold_label": "Gold:",
+    "silver_label": "Silber:",
+    "copper_label": "Kupfer:",
+    "mithril_label": "Mithril:",
+    "platinum_label": "Platin:",
+    "total_wealth_label": "Gesamt:",
     "resistances_button": "Widerstände",
     "statistics_coming_soon": "🔜 Funktion kommt bald",
     "config_misc_group_title": "Verschiedenes",
