--- a/Language/en.json
+++ b/Language/en.json
@@ -160,9 +160,22 @@
     "solo_kills_label": "⚔️ Solo Kills:",
     "deathblows_label": "💀 Deathblows:",
     "kills_label": "🎯 Kills:",
+    "dragon_kills_label": "Dragon Kills:",
+    "legion_kills_label": "Legion Kills:",
+    "mini_dragon_kills_label": "Mini Dragon Kills:",
+    "epic_encounters_label": "Epic Encounters:",
+    "epic_dungeons_label": "Epic Dungeons:",
+    "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 PvE Statistics coming soon",
-    "update_rvr_pvp_button": "🔄 Update stats",
-    "update_rvr_pvp_tooltip": "Retrieve RvR and PvP statistics from Herald",
+    "update_rvr_pvp_button": "🔄 Update Stats",
+    "update_rvr_pvp_tooltip": "Retrieve RvR, PvP, PvE and Wealth statistics from Herald",
+    "wealth_section_title": "💰 Wealth",
+    "gold_label": "Gold:",
+    "silver_label": "Silver:",
+    "copper_label": "Copper:",
+    "mithril_label": "Mithril:",
+    "platinum_label": "Platinum:",
+    "total_wealth_label": "Total:",
     "resistances_button": "Resistances",
     "statistics_coming_soon": "🔜 Feature coming soon",
     "config_misc_group_title": "Miscellaneous",
