--- a/Language/fr.json
+++ b/Language/fr.json
@@ -160,9 +160,22 @@
     "solo_kills_label": "⚔️ Solo Kills:",
     "deathblows_label": "💀 Deathblows:",
     "kills_label": "🎯 Kills:",
+    "dragon_kills_label": "Dragon Kills:",
+    "legion_kills_label": "Legion Kills:",
+    "mini_dragon_kills_label": "Mini Dragon Kills:",
+    "epic_encounters_label": "Epic Encounters:",
+    "epic_dungeons_label": "Epic Dungeons:",
+    "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 Statistiques PvE à venir",
-    "update_rvr_pvp_button": "🔄 Actualiser les stats",
-    "update_rvr_pvp_tooltip": "Récupérer les statistiques RvR et PvP depuis le Herald",
+    "update_rvr_pvp_button": "🔄 Actualiser Stats",
+    "update_rvr_pvp_tooltip": "Récupérer les statistiques RvR, PvP, PvE et Monnaie depuis le Herald",
+    "wealth_section_title": "💰 Monnaie",
+    "gold_label": "Or:",
+    "silver_label": "Argent:",
+    "copper_label": "Cuivre:",
+    "mithril_label": "Mithril:",
+    "platinum_label": "Platine:",
+    "total_wealth_label": "Total:",
     "resistances_button": "Résistances",
     "statistics_coming_soon": "🔜 Fonctionnalité bientôt disponible",
     "config_misc_group_title": "Divers",
