feat: Ajout bouton 'Informations' sur les statistiques (v0.107)
Nouveau bouton explicatif:
- Bouton ℹ 'Informations' à côté du bouton 'Actualiser Stats'
- Explique que les statistiques sont cumulatives depuis création personnage
- Précise qu'il n'y a pas de réinitialisation par saison
- Clarifie que le Herald Eden ne fournit que des totaux globaux

Implémentation:
- Méthode show_stats_info() affichant QMessageBox.information()
- Layout horizontal pour les 2 boutons côte à côte
- Bouton largeur max 150px, aligné avec bouton Actualiser Stats

Traductions multilingues (FR/EN/DE):
- stats_info_button: Texte du bouton
- stats_info_tooltip: Tooltip au survol
- stats_info_title: Titre de la fenêtre d'information
- stats_info_message: Message détaillé avec sections:
  * Données globales (cumul total)
  * Pas de réinitialisation par saison
  * Historique complet
  * Explication source Herald Eden

Fichiers modifiés:
- UI/dialogs.py (lignes 440-475, 960-970)
- Language/fr.json (4 nouvelles clés)
- Language/en.json (4 nouvelles clés)
- Language/de.json (4 nouvelles clés)
- Changelogs/Simple/SIMPLE_v0.107_FR.md (nouvelle section)
- Changelogs/Full/CHANGELOG_v0.107_FR.md (section détaillée)

Bénéfices utilisateur:
 Clarté immédiate sur la nature des statistiques
 Évite confusions avec jeux à réinitialisation saisonnière
 Accessible en permanence (bouton toujours visible)
 Multilingue (même niveau de détail FR/EN/DE)

--- a/Language/de.json
+++ b/Language/de.json
@@ -167,8 +167,12 @@
     "epic_dungeons_label": "Epische Dungeons:",
     "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 PvE-Statistiken demnächst verfügbar",
-    "update_rvr_pvp_button": "🔄 Stats Aktualisieren",
+    "update_rvr_pvp_button": "🔄 Aktualisieren",
     "update_rvr_pvp_tooltip": "RvR-, PvP-, PvE- und Vermögens-Statistiken vom Herald abrufen",
+    "stats_info_button": "ℹ️ Informationen",
+    "stats_info_tooltip": "Informationen über angezeigte Statistiken",
+    "stats_info_title": "Über Statistiken",
+    "stats_info_message": "ℹ️ Wichtige Information\n\nDie angezeigten Statistiken (RvR, PvP, PvE und Vermögen) sind kumulativ seit der Charaktererstellung.\n\n📊 Globale Daten:\n• Gesamt seit Charaktererstellung\n• Keine Zurücksetzung pro Saison\n• Vollständige Historie aller Aktionen\n\n🌐 Datenquelle:\nEdens Herald-Website liefert keine Statistiken pro Saison, sondern nur die gesamten kumulativen Werte für die gesamte Existenz des Charakters.\n\nDies bedeutet, dass die angezeigten Werte Ihre gesamte Reise auf diesem Charakter repräsentieren, über alle Saisons hinweg.",
     "wealth_section_title": "💰 Vermögen",
     "gold_label": "Gold:",
     "silver_label": "Silber:",
