--- a/Language/en.json
+++ b/Language/en.json
@@ -167,8 +167,12 @@
     "epic_dungeons_label": "Epic Dungeons:",
     "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 PvE Statistics coming soon",
-    "update_rvr_pvp_button": "🔄 Update Stats",
+    "update_rvr_pvp_button": "🔄 Update",
     "update_rvr_pvp_tooltip": "Retrieve RvR, PvP, PvE and Wealth statistics from Herald",
+    "stats_info_button": "ℹ️ Information",
+    "stats_info_tooltip": "Information about displayed statistics",
+    "stats_info_title": "About Statistics",
+    "stats_info_message": "ℹ️ Important Information\n\nThe displayed statistics (RvR, PvP, PvE and Wealth) are cumulative since character creation.\n\n📊 Global Data:\n• Total since character creation\n• No reset per season\n• Complete history of all actions\n\n🌐 Data Source:\nEden's Herald website does not provide statistics per season, only the total cumulative values for the character's entire existence.\n\nThis means that the displayed values represent your entire journey on this character, across all seasons.",
     "wealth_section_title": "💰 Wealth",
     "gold_label": "Gold:",
     "silver_label": "Silver:",
