--- a/Language/fr.json
+++ b/Language/fr.json
@@ -167,8 +167,12 @@
     "epic_dungeons_label": "Epic Dungeons:",
     "sobekite_label": "Sobekite:",
     "pve_coming_soon": "🔜 Statistiques PvE à venir",
-    "update_rvr_pvp_button": "🔄 Actualiser Stats",
+    "update_rvr_pvp_button": "🔄 Actualiser",
     "update_rvr_pvp_tooltip": "Récupérer les statistiques RvR, PvP, PvE et Monnaie depuis le Herald",
+    "stats_info_button": "ℹ️ Informations",
+    "stats_info_tooltip": "Informations sur les statistiques affichées",
+    "stats_info_title": "À propos des statistiques",
+    "stats_info_message": "ℹ️ Information importante\n\nLes statistiques affichées (RvR, PvP, PvE et Monnaie) sont cumulatives depuis la création du personnage.\n\n📊 Données globales :\n• Total depuis la création du personnage\n• Pas de réinitialisation par saison\n• Historique complet de toutes les actions\n\n🌐 Source des données :\nLe site Herald d'Eden ne fournit pas les statistiques par saison, uniquement le cumul total de toute l'existence du personnage.\n\nCela signifie que les valeurs affichées représentent l'ensemble de votre parcours sur ce personnage, toutes saisons confondues.",
     "wealth_section_title": "💰 Monnaie",
     "gold_label": "Or:",
     "silver_label": "Argent:",
