UI: Improve statistics layout with 50/50 sections and add Achievements section
- RvR and PvP sections now display side by side with equal width (50/50)
- PvE and new Achievements sections also display side by side (50/50)
- PvP stats (Solo Kills, Deathblows, Kills) now use QGridLayout for proper alignment
- Realm breakdown details now aligned on the same line as totals
- PvE section improved with reduced spacing and vertical separator between columns
- Removed duplicate ':' in PvE labels
- Added new 'Achievements' section placeholder in 3 languages (FR/EN/DE)
- All numbers now properly aligned for better readability

--- a/Language/de.json
+++ b/Language/de.json
@@ -154,6 +154,7 @@
     "rvr_section_title": "⚔️ RvR",
     "pvp_section_title": "🗡️ PvP",
     "pve_section_title": "🐉 PvE",
+    "achievements_section_title": "🏆 Errungenschaften",
     "tower_captures_label": "🗼 Turm-Eroberungen:",
     "keep_captures_label": "🏰 Burg-Eroberungen:",
     "relic_captures_label": "💎 Reliquien-Eroberungen:",
