--- a/Language/fr.json
+++ b/Language/fr.json
@@ -154,6 +154,7 @@
     "rvr_section_title": "⚔️ RvR",
     "pvp_section_title": "🗡️ PvP",
     "pve_section_title": "🐉 PvE",
+    "achievements_section_title": "🏆 Réalisations",
     "tower_captures_label": "🗼 Tower Captures:",
     "keep_captures_label": "🏰 Keep Captures:",
     "relic_captures_label": "💎 Relic Captures:",
