Feat: Add version check in main window Information section
Features:
- Automatic version check from GitHub (version.txt)
- Background thread (non-blocking, QThread)
- Display in main window Information section
- Shows: current version, latest version, update status

UI Changes (Main Window ONLY):
- Renamed 'Monnaie' section to 'Informations' (FR/EN/DE)
- Added version labels in main window right panel
- Green highlight when update available
- Orange warning on check error
- Gray 'checking...' during verification

Files:
- Functions/version_checker.py: Version check logic with requests
- version.txt: Current version file (0.107)
- Language/*.json: New translations
  * info_section_title (FR/EN/DE)
  * version_check_current/latest/update_available/up_to_date/error
- Functions/ui_manager.py:
  * Renamed Monnaie section to Informations
  * Added version display UI (labels + layout)
  * Background thread implementation
  * Auto-start check on app startup

--- a/Language/en.json
+++ b/Language/en.json
@@ -238,5 +238,11 @@
     "backup_settings_saved_title": "Settings saved",
     "backup_settings_saved_message": "Backup settings have been updated",
     "backup_settings_error": "Error saving backup settings",
-    "backup_no_backups_yet": "No backups yet"
+    "backup_no_backups_yet": "No backups yet",
+    "info_section_title": "ℹ️ Information",
+    "version_check_current": "Current version:",
+    "version_check_latest": "Latest version:",
+    "version_check_update_available": "🎉 Update available!",
+    "version_check_up_to_date": "✅ Up to date",
+    "version_check_error": "⚠️ Check failed"
 }
