Feat: Version check system with manual button
- Add version check system from GitHub
- Automatic background check at startup
- Manual 'Check' button with disable during verification
- Status under 'Latest version' with aligned button
- 'Currency' section renamed to 'Information'
- Complete FR/EN/DE translations
- Updated changelogs (simple + full)

--- a/Language/de.json
+++ b/Language/de.json
@@ -244,5 +244,7 @@
     "version_check_latest": "Neueste Version:",
     "version_check_update_available": "🎉 Update verfügbar!",
     "version_check_up_to_date": "✅ Aktuell",
-    "version_check_error": "⚠️ Prüfung fehlgeschlagen"
+    "version_check_error": "⚠️ Prüfung fehlgeschlagen",
+    "version_check_button": "🔄 Prüfen",
+    "version_check_button_checking": "⏳ Wird geprüft..."
 }
