--- a/Language/en.json
+++ b/Language/en.json
@@ -244,5 +244,7 @@
     "version_check_latest": "Latest version:",
     "version_check_update_available": "🎉 Update available!",
     "version_check_up_to_date": "✅ Up to date",
-    "version_check_error": "⚠️ Check failed"
+    "version_check_error": "⚠️ Check failed",
+    "version_check_button": "🔄 Check",
+    "version_check_button_checking": "⏳ Checking..."
 }
