--- a/Language/fr.json
+++ b/Language/fr.json
@@ -244,5 +244,7 @@
     "version_check_latest": "Dernière version:",
     "version_check_update_available": "🎉 Mise à jour disponible !",
     "version_check_up_to_date": "✅ À jour",
-    "version_check_error": "⚠️ Erreur de vérification"
+    "version_check_error": "⚠️ Erreur de vérification",
+    "version_check_button": "🔄 Vérifier",
+    "version_check_button_checking": "⏳ Vérification en cours..."
 }
