Feat: Add download link and red text for outdated version
- Show current version in red when update is available
- Add clickable download link to GitHub releases/latest
- Hide/show download link based on update status
- Add translations for download link (FR/EN/DE)
- Improve version status display management

--- a/Language/de.json
+++ b/Language/de.json
@@ -246,5 +246,6 @@
     "version_check_up_to_date": "✅ Aktuell",
     "version_check_error": "⚠️ Prüfung fehlgeschlagen",
     "version_check_button": "🔄 Prüfen",
-    "version_check_button_checking": "⏳ Wird geprüft..."
+    "version_check_button_checking": "⏳ Wird geprüft...",
+    "version_check_download": "📥 Herunterladen"
 }
