feat: Add comprehensive font scaling system with ComboBox selector
Implement a complete font scaling solution to improve accessibility and readability:

CORE FEATURES:
- Font scale configuration with 5 levels: 100%, 125%, 150%, 175%, 200%
- ComboBox selector in configuration dialog (replaced previous slider)
- Real-time font scaling applied immediately on change
- Persistent configuration saved in config.json

TECHNICAL IMPLEMENTATION:
- theme_manager.py: Added scale_stylesheet_fonts(), get_scaled_size(), get_scaled_stylesheet()
- CSS regex scaling for both pt and px units in theme stylesheets
- Dynamic inline stylesheet scaling for all Python-defined styles
- Two-tier approach: QApplication.setFont() + stylesheet scaling

FILES MODIFIED:
- Functions/theme_manager.py: Added 3 new font scaling functions
- Functions/config_manager.py: Added font_scale default value (1.0)
- UI/dialogs.py:
  * Replaced QSlider with QComboBox for better UX
  * Added QScrollArea to configuration dialog for responsive layout
  * Modified 18 inline stylesheets to use get_scaled_size()
- main.py:
  * Added apply_font_scale() wrapper function
  * Modified 3 inline stylesheets in Herald progress dialog
  * Updated save_configuration() to handle ComboBox value
- Language files: Added config_font_scale_label translations (FR/EN/DE)

SCALED ELEMENTS:
- Application base font (affects all widgets by default)
- Theme CSS stylesheets (menus, tooltips, buttons)
- RvR statistics detail labels (3 labels)
- Money, banner, rank title labels
- Achievement progress labels (12 labels)
- Herald import dialog labels (3 labels)
- All text scales proportionally maintaining visual hierarchy

RESPONSIVE DESIGN:
- Configuration dialog now uses QScrollArea for better resizing
- Minimum size increased to 600x500, initial size 700x700
- Content properly scrollable when window is small
- Labels and controls no longer overlap on resize

SCALE EXAMPLES:
- 9pt base  11.2pt (125%), 13.5pt (150%), 15.8pt (175%), 18.0pt (200

--- a/Language/de.json
+++ b/Language/de.json
@@ -59,6 +59,7 @@
     "debug_level_all": "DEBUG",
     "status_bar_loaded": "Bereit. Geladen in {duration:.2f} Sekunden.",
     "config_theme_label": "Thema",
+    "config_font_scale_label": "Textgröße",
     "theme_light": "Hell",
     "theme_dark": "Dunkel",
     "debug_font_size_menu": "Schrift",
