feat: Enhanced Herald search window with detailed progress steps and visual status indicators
Major improvements to the Herald character search interface:

UI Enhancements:
- Redesigned progress window (550x350px) with 9 detailed steps
- Added 3-state visual status system:
  *  Waiting (gray): Step not started yet
  *  In Progress (blue): Currently executing with bold text
  *  Completed (green): Successfully finished
- All steps remain visible throughout the search process
- Steps automatically update as progress advances
- Grouped progress area in QGroupBox for better organization
- Consistent design with 'Update from Herald' window

Technical Changes:
- Refactored SearchThread in UI/dialogs.py:
  * Added progress_update signal for real-time updates
  * Integrated all search logic into thread (previously in eden_scraper.py)
  * Emits progress messages at each key step
  * Clean browser closure in finally block
- New _on_search_progress_update() method:
  * Automatic step detection via icon mapping
  * Automatic marking of previous steps as completed
  * Special handling for final success message
  * Font scaling support via _get_scaled_size()
- Added helper method _get_scaled_size() for font scaling

Search Progress Steps (9 total):
1.  Checking authentication cookies
2.  Initializing Chrome browser
3.  Loading cookies into browser
4.  Searching on Eden Herald
5.  Loading search page
6.  Extracting search results
7.  Saving results
8.  Formatting found characters
9.  Closing browser

Translations:
- Added 13 new translation keys in FR/EN/DE:
  * herald_search_progress_title
  * herald_search_progress_checking_cookies
  * herald_search_progress_init_browser
  * herald_search_progress_loading_cookies
  * herald_search_progress_searching
  * herald_search_progress_loading_page
  * herald_search_progress_extracting
  * herald_search_progress_saving
  * herald_search_progress_formatting
  * herald_search_progress_complete
  * herald_search_progress_closing
  * herald_s

--- a/Language/de.json
+++ b/Language/de.json
@@ -248,5 +248,17 @@
     "version_check_error": "⚠️ Prüfung fehlgeschlagen",
     "version_check_button": "🔄 Prüfen",
     "version_check_button_checking": "⏳ Wird geprüft...",
-    "version_check_download": "📥 Herunterladen"
+    "version_check_download": "📥 Herunterladen",
+    "herald_search_progress_title": "⏳ Suche läuft...",
+    "herald_search_progress_checking_cookies": "🔐 Überprüfung der Authentifizierungs-Cookies...",
+    "herald_search_progress_init_browser": "🌐 Initialisierung des Chrome-Browsers...",
+    "herald_search_progress_loading_cookies": "🍪 Laden der Cookies in den Browser...",
+    "herald_search_progress_searching": "🔍 Suche nach '{0}' auf Eden Herald...",
+    "herald_search_progress_loading_page": "⏳ Laden der Suchseite...",
+    "herald_search_progress_extracting": "📊 Extrahieren der Suchergebnisse...",
+    "herald_search_progress_saving": "💾 Speichern der Ergebnisse...",
+    "herald_search_progress_formatting": "🎯 Formatierung gefundener Charaktere...",
+    "herald_search_progress_complete": "✅ Suche erfolgreich abgeschlossen!",
+    "herald_search_progress_closing": "🔄 Browser wird geschlossen...",
+    "herald_search_wait_message": "⏱️ Bitte warten Sie, dieser Vorgang kann einige Sekunden dauern..."
 }
