feat: Add multilingual progress dialog system with translation support
Implemented comprehensive multilingual translation system for all progress dialogs
and created unified progress dialog architecture.

UI Enhancements:
- New ProgressStepsDialog base class (UI/progress_dialog_base.py)
- Visual step states with emoji indicators (⏺️ pending, ⏳ running, ✅ completed)
- Thread-safe dialog updates with RuntimeError protection
- 4 migrated dialogs: Stats update, Character update (×2), Cookie generation
- Dynamic translation of dialog titles, descriptions, and status messages

Technical Changes:
- Created UI/progress_dialog_base.py (600+ lines):
  * ProgressStep class with 5 states (PENDING, RUNNING, COMPLETED, SKIPPED, ERROR)
  * StepConfiguration class with 9 predefined configurations
  * ProgressStepsDialog reusable base class with thread-safe methods
- Refactored UI/dialogs.py (4 dialogs):
  * CharacterSheetDialog.update_rvr_stats() - Uses lang.get() for all texts
  * CharacterSheetDialog.update_from_herald() - Translated title/description/messages
  * CookieManagerDialog.generate_cookies() - Interactive step with translation
- Updated main.py (CharacterApp.update_character_from_herald()):
  * Translated dialog with dynamic character name
  * Named parameters for format strings ({char_name}, {count}, {error})
- StepConfiguration classes use translation keys instead of hardcoded French
- ProgressStepsDialog translates dynamically in __init__() and _update_step_ui()

Worker Thread Pattern:
- 4 Security Patterns implemented:
  * RuntimeError protection with try/except wrappers
  * Cleanup resources before thread termination
  * Graceful interruption via _stop_requested flag
  * Dialog rejection handling with user confirmation
- Signal flow: Thread → Wrapper → Dialog (thread-safe)
- External resource cleanup (WebDriver) before terminate()

Translations:
- Added 52 new translation keys in FR/EN/DE (156 total entries):
  * Step descriptions (35 keys):
    - step_herald_conn

--- a/Language/de.json
+++ b/Language/de.json
@@ -260,5 +260,45 @@
     "herald_search_progress_formatting": "🎯 Formatierung gefundener Charaktere...",
     "herald_search_progress_complete": "✅ Suche erfolgreich abgeschlossen!",
     "herald_search_progress_closing": "🔄 Browser wird geschlossen...",
-    "herald_search_wait_message": "⏱️ Bitte warten Sie, dieser Vorgang kann einige Sekunden dauern..."
+    "herald_search_wait_message": "⏱️ Bitte warten Sie, dieser Vorgang kann einige Sekunden dauern...",
+    "step_herald_connection_cookies": "Überprüfung der Authentifizierungs-Cookies",
+    "step_herald_connection_init": "Initialisierung des Chrome-Browsers",
+    "step_herald_connection_load": "Laden der Cookies in den Browser",
+    "step_scraper_init": "Initialisierung des Herald-Scrapers",
+    "step_herald_search_search": "Suche auf Eden Herald",
+    "step_herald_search_load": "Laden der Suchseite",
+    "step_herald_search_extract": "Extrahieren der Suchergebnisse",
+    "step_herald_search_save": "Speichern der Ergebnisse",
+    "step_herald_search_format": "Formatierung gefundener Charaktere",
+    "step_stats_scraping_rvr": "Abrufen der RvR-Eroberungen",
+    "step_stats_scraping_pvp": "Abrufen der PvP-Statistiken",
+    "step_stats_scraping_pve": "Abrufen der PvE-Statistiken",
+    "step_stats_scraping_wealth": "Abrufen des Reichtums",
+    "step_stats_scraping_achievements": "Abrufen der Errungenschaften",
+    "step_character_update_extract_name": "Extrahieren des Charakternamens",
+    "step_character_update_init": "Initialisierung des Chrome-Browsers",
+    "step_character_update_load_cookies": "Laden der Cookies in den Browser",
+    "step_character_update_navigate": "Navigation zur Suchseite",
+    "step_character_update_wait": "Laden der Suchseite",
+    "step_character_update_extract_data": "Extrahieren der Suchergebnisse",
+    "step_character_update_format": "Formatierung der Charakterdaten",
+    "step_character_update_close": "Browser wird geschlossen",
+    "step_cookie_gen_config": "Konfiguration des Browsers",
+    "step_cookie_gen_open": "Öffnen der Anmeldeseite",
+    "step_cookie_gen_wait_user": "Warten auf Benutzeranmeldung...",
+    "step_cookie_gen_extract": "Extrahieren der Cookies",
+    "step_cookie_gen_save": "Speichern der Cookies",
+    "step_cookie_gen_validate": "Validierung und Überprüfung",
+    "step_cleanup": "Browser wird geschlossen",
+    "progress_stats_update_title": "📊 Statistiken werden aktualisiert...",
+    "progress_stats_update_desc": "Abrufen von RvR-, PvP-, PvE- und Reichtum-Statistiken vom Eden Herald",
+    "progress_character_update_title": "🌐 Aktualisierung vom Herald...",
+    "progress_character_update_desc": "Abrufen von Charakterinformationen vom Eden Herald",
+    "progress_character_update_main_desc": "Abrufen der Daten von {char_name} vom Eden Herald",
+    "progress_cookie_gen_title": "🍪 Cookies werden generiert...",
+    "progress_cookie_gen_desc": "Öffnen des Browsers für Discord-Authentifizierung",
+    "progress_stats_complete": "✅ Statistiken abgerufen",
+    "progress_character_complete": "✅ Daten abgerufen",
+    "progress_cookie_success": "✅ {count} Cookies generiert!",
+    "progress_error": "❌ {error}"
 }
