--- a/Language/en.json
+++ b/Language/en.json
@@ -260,5 +260,45 @@
     "herald_search_progress_formatting": "🎯 Formatting found characters...",
     "herald_search_progress_complete": "✅ Search completed successfully!",
     "herald_search_progress_closing": "🔄 Closing browser...",
-    "herald_search_wait_message": "⏱️ Please wait, this operation may take a few seconds..."
+    "herald_search_wait_message": "⏱️ Please wait, this operation may take a few seconds...",
+    "step_herald_connection_cookies": "Checking authentication cookies",
+    "step_herald_connection_init": "Initializing Chrome browser",
+    "step_herald_connection_load": "Loading cookies into browser",
+    "step_scraper_init": "Initializing Herald scraper",
+    "step_herald_search_search": "Searching on Eden Herald",
+    "step_herald_search_load": "Loading search page",
+    "step_herald_search_extract": "Extracting search results",
+    "step_herald_search_save": "Saving results",
+    "step_herald_search_format": "Formatting found characters",
+    "step_stats_scraping_rvr": "Retrieving RvR captures",
+    "step_stats_scraping_pvp": "Retrieving PvP stats",
+    "step_stats_scraping_pve": "Retrieving PvE stats",
+    "step_stats_scraping_wealth": "Retrieving wealth",
+    "step_stats_scraping_achievements": "Retrieving achievements",
+    "step_character_update_extract_name": "Extracting character name",
+    "step_character_update_init": "Initializing Chrome browser",
+    "step_character_update_load_cookies": "Loading cookies into browser",
+    "step_character_update_navigate": "Navigating to search page",
+    "step_character_update_wait": "Loading search page",
+    "step_character_update_extract_data": "Extracting search results",
+    "step_character_update_format": "Formatting character data",
+    "step_character_update_close": "Closing browser",
+    "step_cookie_gen_config": "Configuring browser",
+    "step_cookie_gen_open": "Opening login page",
+    "step_cookie_gen_wait_user": "Waiting for user login...",
+    "step_cookie_gen_extract": "Extracting cookies",
+    "step_cookie_gen_save": "Saving cookies",
+    "step_cookie_gen_validate": "Validating and checking",
+    "step_cleanup": "Closing browser",
+    "progress_stats_update_title": "📊 Updating statistics...",
+    "progress_stats_update_desc": "Retrieving RvR, PvP, PvE and Wealth statistics from Eden Herald",
+    "progress_character_update_title": "🌐 Updating from Herald...",
+    "progress_character_update_desc": "Retrieving character information from Eden Herald",
+    "progress_character_update_main_desc": "Retrieving {char_name} data from Eden Herald",
+    "progress_cookie_gen_title": "🍪 Generating cookies...",
+    "progress_cookie_gen_desc": "Opening browser for Discord authentication",
+    "progress_stats_complete": "✅ Statistics retrieved",
+    "progress_character_complete": "✅ Data retrieved",
+    "progress_cookie_success": "✅ {count} cookies generated!",
+    "progress_error": "❌ {error}"
 }
