--- a/Language/fr.json
+++ b/Language/fr.json
@@ -260,5 +260,45 @@
     "herald_search_progress_formatting": "🎯 Formatage des personnages trouvés...",
     "herald_search_progress_complete": "✅ Recherche terminée avec succès !",
     "herald_search_progress_closing": "🔄 Fermeture du navigateur...",
-    "herald_search_wait_message": "⏱️ Veuillez patienter, cette opération peut prendre quelques secondes..."
+    "herald_search_wait_message": "⏱️ Veuillez patienter, cette opération peut prendre quelques secondes...",
+    "step_herald_connection_cookies": "Vérification des cookies d'authentification",
+    "step_herald_connection_init": "Initialisation du navigateur Chrome",
+    "step_herald_connection_load": "Chargement des cookies dans le navigateur",
+    "step_scraper_init": "Initialisation du scraper Herald",
+    "step_herald_search_search": "Recherche sur Eden Herald",
+    "step_herald_search_load": "Chargement de la page de recherche",
+    "step_herald_search_extract": "Extraction des résultats de recherche",
+    "step_herald_search_save": "Sauvegarde des résultats",
+    "step_herald_search_format": "Formatage des personnages trouvés",
+    "step_stats_scraping_rvr": "Récupération des captures RvR",
+    "step_stats_scraping_pvp": "Récupération des stats PvP",
+    "step_stats_scraping_pve": "Récupération des stats PvE",
+    "step_stats_scraping_wealth": "Récupération de la richesse",
+    "step_stats_scraping_achievements": "Récupération des achievements",
+    "step_character_update_extract_name": "Extraction du nom du personnage",
+    "step_character_update_init": "Initialisation du navigateur Chrome",
+    "step_character_update_load_cookies": "Chargement des cookies dans le navigateur",
+    "step_character_update_navigate": "Navigation vers la page de recherche",
+    "step_character_update_wait": "Chargement de la page de recherche",
+    "step_character_update_extract_data": "Extraction des résultats de recherche",
+    "step_character_update_format": "Formatage des données du personnage",
+    "step_character_update_close": "Fermeture du navigateur",
+    "step_cookie_gen_config": "Configuration du navigateur",
+    "step_cookie_gen_open": "Ouverture de la page de connexion",
+    "step_cookie_gen_wait_user": "En attente de la connexion utilisateur...",
+    "step_cookie_gen_extract": "Extraction des cookies",
+    "step_cookie_gen_save": "Sauvegarde des cookies",
+    "step_cookie_gen_validate": "Validation et vérification",
+    "step_cleanup": "Fermeture du navigateur",
+    "progress_stats_update_title": "📊 Mise à jour des statistiques...",
+    "progress_stats_update_desc": "Récupération des statistiques RvR, PvP, PvE et Wealth depuis le Herald Eden",
+    "progress_character_update_title": "🌐 Mise à jour depuis Herald...",
+    "progress_character_update_desc": "Récupération des informations du personnage depuis Eden Herald",
+    "progress_character_update_main_desc": "Récupération des données de {char_name} depuis le Herald Eden",
+    "progress_cookie_gen_title": "🍪 Génération des cookies...",
+    "progress_cookie_gen_desc": "Ouverture du navigateur pour authentification Discord",
+    "progress_stats_complete": "✅ Statistiques récupérées",
+    "progress_character_complete": "✅ Données récupérées",
+    "progress_cookie_success": "✅ {count} cookies générés !",
+    "progress_error": "❌ {error}"
 }
